--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~normalize-scss/sass/normalize/import-now";
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
