--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </md-nav-list>
   </md-sidenav>
   <div class="my-content">
-    <md-toolbar [color]="primary">
+    <md-toolbar>
       <button md-icon-button (click)="sidenav.open()">
         <md-icon>menu</md-icon>
       </button>
