--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,14 @@
       <a md-list-item (click)="sidenav.close()" [routerLink]="['/']">
         <md-icon md-list-icon>Home</md-icon>
         <span md-line>Home</span>
-        <span md-line class="secondary">Home</span>
+        <span md-line class="secondary"></span>
       </a>
+      <md-divider></md-divider>
+      <md-list-item>
+        <md-icon md-list-icon>event_note</md-icon>
+        <span md-line>Upcoming Events</span>
+        <span md-line class="secondary">Which event will you attend next?</span>
+      </md-list-item>
     </md-nav-list>
   </md-sidenav>
   <div class="my-content">
