--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,31 @@
-<md-sidenav-container>
-  <md-sidenav #sidenav class="sidenav">
-    <md-nav-list>
-      <a md-list-item (click)="sidenav.close()" [routerLink]="['/']">
-        <md-icon md-list-icon>Home</md-icon>
-        <span md-line>Home</span>
-        <span md-line class="secondary"></span>
-      </a>
-      <md-divider></md-divider>
-      <md-list-item>
-        <md-icon md-list-icon>event_note</md-icon>
-        <span md-line>Upcoming Events</span>
-        <span md-line class="secondary">Which event will you attend next?</span>
-      </md-list-item>
-    </md-nav-list>
-  </md-sidenav>
-  <div class="my-content">
-    <md-toolbar>
-      <button md-icon-button (click)="sidenav.open()">
+<div class="container"
+     fxLayout
+     fxLayoutAlign="center"
+     fxLayoutGap.xs="0">
+  <md-toolbar>
+    <div class="item item-1"
+         fxFlex="20%"
+         fxFlexOrder="1">Asian Sports Network</div>
+    <div class="item item-2"
+         fxFlex
+         fxFlexOrder="2"
+         fxLayoutAlign="end end">
+      <button md-icon-button [mdMenuTriggerFor]="menu">
         <md-icon>menu</md-icon>
       </button>
-      <span>{{title}}</span>
-    </md-toolbar>
-    <router-outlet></router-outlet>
-  </div>
-</md-sidenav-container>
+      <md-menu
+        yPosition="below"
+        [overlapTrigger]="false"
+        #menu="mdMenu">
+        <button md-menu-item>
+            <span>Log In</span>
+        </button>
+        <button md-menu-item disabled>
+            <span>Log Out</span>
+        </button>
+      </md-menu>
+    </div>
+  </md-toolbar>
+</div>
+
+<router-outlet></router-outlet>
